new arabic words

--- a/index.html
+++ b/index.html
@@ -1370,7 +1370,38 @@
     {"tense1": "Impasse", "tense2": "مَأزَق", "type": "word"},
     {"tense1": "Au lieu de", "tense2": "عِوَضاً عَن", "type": "sentence"},
     {"tense1": "Argument", "tense2": "حُجَّة", "type": "word"},
-    {"tense1": "S'engager", "tense2": "اِلْتَزَمَ / يَلْتَزِمُ / اِلْتِزام / اِلْتَزِمْ", "type": "verb"}
+    {"tense1": "S'engager", "tense2": "اِلْتَزَمَ / يَلْتَزِمُ / اِلْتِزام / اِلْتَزِمْ", "type": "verb"},
+    {"tense1": "amoureux", "tense2": "مُغْرَم / مُغْرَمُون / مُغْرَمَان / مُغْرَمِين / مُغْرَمَيْن", "type": "word"},
+  {"tense1": "honnêtement", "tense2": "بِصَرَاحَة", "type": "word"},
+  {"tense1": "bêtise", "tense2": "تُرَّهَات / تُرَّهَات / - / تُرَّهَات / -", "type": "word"},
+  {"tense1": "coup de pied", "tense2": "رَكَلَ / يَرْكُل / رَكْل / اُرْكُل / يُرْكَل / رُكِلَ", "type": "verb"},
+  {"tense1": "affronter", "tense2": "تَنَافَسَ / يَتَنَافَس / تَنَافُس / تَنَافَسْ / يُتَنَافَس / تُنُوفِسَ", "type": "verb"},
+  {"tense1": "épice", "tense2": "بَهَار / بَهَارَات / بَهَارَان / بَهَارَات / بَهَارَيْن", "type": "word"},
+  {"tense1": "détecteur", "tense2": "لَاقِط / لَوَاقِط / لَاقِطَان / لَوَاقِط / لَاقِطَيْن", "type": "word"},
+  {"tense1": "obstacle", "tense2": "عَقَبَة / عَقَبَات / عَقَبَتَان / عَقَبَات / عَقَبَتَيْن", "type": "word"},
+  {"tense1": "brochette", "tense2": "كَبَاب / كَبَابَات / كَبَابَان / كَبَابَات / كَبَابَيْن", "type": "word"},
+  {"tense1": "gratter", "tense2": "دَلَّكَ / يُدَلِّك / تَدْلِيك / دَلِّك / يُدَلَّك / دُلِّكَ", "type": "verb"},
+  {"tense1": "front", "tense2": "جَبْهَة / جِبَاه / جَبْهَتَان / جِبَاهاً / جَبْهَتَيْن", "type": "word"},
+  {"tense1": "nuité", "tense2": "مَبِيت / مَبِيتَات / مَبِيتَان / مَبِيتَات / مَبِيتَيْن", "type": "word"},
+  {"tense1": "montgolfière", "tense2": "مِنْطَاد / مَنَاطِيد / مِنْطَادَان / مَنَاطِيد / مِنْطَادَيْن", "type": "word"},
+  {"tense1": "fouiller", "tense2": "نَقَبَ / يَنْقُب / نَقْب / اُنْقُب / يُنْقَب / نُقِبَ", "type": "verb"},
+  {"tense1": "pichet", "tense2": "إِبْرِيق / أَبَارِيق / إِبْرِيقَان / أَبَارِيق / إِبْرِيقَيْن", "type": "word"},
+  {"tense1": "sieste", "tense2": "قَيْلُولَة / قَيْلُولَات / قَيْلُولَتَان / قَيْلُولَات / قَيْلُولَتَيْن", "type": "word"},
+  {"tense1": "rugir", "tense2": "زَأَرَ / يَزْأَرُ / زَئِير / اُزْأَر / يُزْأَر / زُئِرَ", "type": "verb"},
+  {"tense1": "contenu vidéo", "tense2": "مُحْتَوَى فِيدْيُو", "type": "sentence"},
+  {"tense1": "divertissement", "tense2": "تَرْفِيه / تَرْفِيهَات / تَرْفِيهَان / تَرْفِيهَات / تَرْفِيهَيْن", "type": "word"},
+  {"tense1": "épuiser", "tense2": "نَفَدَ / يَنْفَد / نَفَاد / اِنْفَد / يُنْفَد / نُفِدَ", "type": "verb"},
+  {"tense1": "indice", "tense2": "تَلْمِيح / تَلْمِيحَات / تَلْمِيحَان / تَلْمِيحَات / تَلْمِيحَيْن", "type": "word"},
+  {"tense1": "attention", "tense2": "اِهْتِمَام / اِهْتِمَامَات / اِهْتِمَامَان / اِهْتِمَامَات / اِهْتِمَامَيْن", "type": "word"},
+  {"tense1": "look", "tense2": "مَظْهَر / مَظَاهِر / مَظْهَرَان / مَظَاهِر / مَظْهَرَيْن", "type": "word"},
+  {"tense1": "faltar", "tense2": "نَقَصَ / يَنْقُص / نَقْص / اُنْقُص / يُنْقَص / نُقِصَ", "type": "verb"},
+  {"tense1": "stocker", "tense2": "خَزَّنَ / يُخَزِّن / تَخْزِين / خَزِّن / يُخَزَّن / خُزِّنَ", "type": "verb"},
+  {"tense1": "saveur", "tense2": "نَكْهَة / نَكْهَات / نَكْهَتَان / نَكْهَات / نَكْهَتَيْن", "type": "word"},
+  {"tense1": "cône", "tense2": "مَخْرُوط / مَخَارِيط / مَخْرُوطَان / مَخَارِيط / مَخْرُوطَيْن", "type": "word"},
+  {"tense1": "menthe", "tense2": "نَعْنَاع / نَعَانِع / نَعْنَاعَان / نَعَانِع / نَعْنَاعَيْن", "type": "word"},
+  {"tense1": "cerveau", "tense2": "دِمَاغ / أَدْمِغَة / دِمَاغَان / أَدْمِغَة / دِمَاغَيْن", "type": "word"},
+  {"tense1": "bouchon", "tense2": "غِطَاء زُجَاجَة", "type": "sentence"},
+  {"tense1": "croquette", "tense2": "مُقَرْمَشَة / مُقَرْمَشَات / مُقَرْمَشَتَان / مُقَرْمَشَات / مُقَرْمَشَتَيْن", "type": "word"}
 ]
 
 
