--- a/index.html
+++ b/index.html
@@ -283,7 +283,6 @@
   {"tense1": "Despedirse", "tense2": "وَدَّعَ / يُوَدِّع / تَوْدِيع / وَدِّعْ / يُوَدَّع / وُدِّعَ", "type": "verb"},
   {"tense1": "Tente", "tense2": "خَيْمَة / خِيَام / خَيْمَتَان / خِيَامًا / خَيْمَتَيْن", "type": "word"},
   {"tense1": "Inviter (présent)", "tense2": "دَعَا / يَدْعُو / دَعْوَة / اُدْعُ / يُدْعَى / دُعِيَ", "type": "verb"},
-  {"tense1": "Inviter (passé)", "tense2": "دَعَا / يَدْعُو / دَعْوَة / اُدْعُ / يُدْعَى / دُعِيَ", "type": "verb"},
   {"tense1": "Vieux (informel)", "tense2": "عَجُوز / عَجَائِز / عَجُوزَان / عَجَائِزَ / عَجُوزَيْن", "type": "word"},
   {"tense1": "Gâcher", "tense2": "أَفْسَدَ / يُفْسِد / إِفْسَاد / أَفْسِدْ / يُفْسَد / أُفْسِدَ", "type": "verb"},
   {"tense1": "Plaza (place publique)", "tense2": "سَاحَة / سَاحَات / سَاحَتَان / سَاحَاتٍ / سَاحَتَيْن", "type": "word"},
@@ -1373,7 +1372,7 @@
       {"tense1": "S'engager", "tense2": "اِلْتَزَمَ/يَلْتَزِمُ/اِلْتِزَام/اِلْتَزِمْ/يُلْتَزَمُ/اُلْتُزِمَ", "type": "verb"},
       {"tense1": "amoureux", "tense2": "مُغْرَم / مُغْرَمُون / مُغْرَمَان / مُغْرَمِين / مُغْرَمَيْن", "type": "word"},
   {"tense1": "honnêtement", "tense2": "بِصَرَاحَة", "type": "word"},
-  {"tense1": "bêtise", "tense2": "تُرَّهَات / تُرَّهَات / - / تُرَّهَات / -", "type": "word"},
+  {"tense1": "bêtise", "tense2": "تُرَّهَات / تُرَّهَتَان /تُرَّهَة / تُرَّهَات / تُرَّهَة", "type": "word"},
   {"tense1": "coup de pied", "tense2": "رَكَلَ / يَرْكُل / رَكْل / اُرْكُل / يُرْكَل / رُكِلَ", "type": "verb"},
   {"tense1": "affronter", "tense2": "تَنَافَسَ / يَتَنَافَس / تَنَافُس / تَنَافَسْ / يُتَنَافَس / تُنُوفِسَ", "type": "verb"},
   {"tense1": "épice", "tense2": "بَهَار / بَهَارَات / بَهَارَان / بَهَارَات / بَهَارَيْن", "type": "word"},
