weekly new arabic words

--- a/index.html
+++ b/index.html
@@ -1310,7 +1310,7 @@
     {"tense1": "à terre", "tense2": "عَلَى الْبَرّ", "type": "sentence"},
     {"tense1": "faire semblant", "tense2": "تَظَاهَرَ / يَتَظَاهَرُ / تَظَاهُر / تَظَاهَرْ / يُتَظَاهَرُ / تُظُوهِرَ", "type": "verb"},
     {"tense1": "écouter attentivement", "tense2": "أَنْصَتَ / يُنْصِتُ / إِنْصَات / أَنْصِتْ / يُنْصَتُ / أُنْصِتَ", "type": "verb"},
-    {"tense1": "aspirer à", "tense2": "تَشَوَّقَ / يَتَشَوَّقُ / تَشَوُّق / تَشَوَّقْ / يُتَشَوَّقُ / تُشُوِّقَ", "type": "verb"},
+    {"tense1": "Avoir hâte", "tense2": "تَشَوَّقَ / يَتَشَوَّقُ / تَشَوُّق / تَشَوَّقْ / يُتَشَوَّقُ / تُشُوِّقَ", "type": "verb"},
     {"tense1": "camouflage", "tense2": "تَمْوِيه / تَمْوِيهَات / تَمْوِيهَان / تَمْوِيهَاتٍ / تَمْوِيهَيْن", "type": "word"},
     {"tense1": "devinette", "tense2": "أُحْجِيَّة / أَحَاجٍ / أُحْجِيَّتَان / أَحَاجٍ / أُحْجِيَّتَيْن", "type": "word"},
     {"tense1": "verrou", "tense2": "قُفْل / أَقْفَال / قُفْلَان / أَقْفَالاً / قُفْلَيْن", "type": "word"},
@@ -1371,37 +1371,82 @@
       {"tense1": "Argument", "tense2": "حُجَّة/حُجَج/حُجَّتَان/حُجَجاً/حُجَّتَيْن", "type": "word"},
       {"tense1": "S'engager", "tense2": "اِلْتَزَمَ/يَلْتَزِمُ/اِلْتِزَام/اِلْتَزِمْ/يُلْتَزَمُ/اُلْتُزِمَ", "type": "verb"},
       {"tense1": "amoureux", "tense2": "مُغْرَم / مُغْرَمُون / مُغْرَمَان / مُغْرَمِين / مُغْرَمَيْن", "type": "word"},
-  {"tense1": "honnêtement", "tense2": "بِصَرَاحَة", "type": "word"},
-  {"tense1": "bêtise", "tense2": "تُرَّهَات / تُرَّهَتَان /تُرَّهَة / تُرَّهَات / تُرَّهَة", "type": "word"},
-  {"tense1": "coup de pied", "tense2": "رَكَلَ / يَرْكُل / رَكْل / اُرْكُل / يُرْكَل / رُكِلَ", "type": "verb"},
-  {"tense1": "affronter", "tense2": "تَنَافَسَ / يَتَنَافَس / تَنَافُس / تَنَافَسْ / يُتَنَافَس / تُنُوفِسَ", "type": "verb"},
-  {"tense1": "épice", "tense2": "بَهَار / بَهَارَات / بَهَارَان / بَهَارَات / بَهَارَيْن", "type": "word"},
-  {"tense1": "détecteur", "tense2": "لَاقِط / لَوَاقِط / لَاقِطَان / لَوَاقِط / لَاقِطَيْن", "type": "word"},
-  {"tense1": "obstacle", "tense2": "عَقَبَة / عَقَبَات / عَقَبَتَان / عَقَبَات / عَقَبَتَيْن", "type": "word"},
-  {"tense1": "brochette", "tense2": "كَبَاب / كَبَابَات / كَبَابَان / كَبَابَات / كَبَابَيْن", "type": "word"},
-  {"tense1": "gratter", "tense2": "دَلَّكَ / يُدَلِّك / تَدْلِيك / دَلِّك / يُدَلَّك / دُلِّكَ", "type": "verb"},
-  {"tense1": "front", "tense2": "جَبْهَة / جِبَاه / جَبْهَتَان / جِبَاهاً / جَبْهَتَيْن", "type": "word"},
-  {"tense1": "nuité", "tense2": "مَبِيت / مَبِيتَات / مَبِيتَان / مَبِيتَات / مَبِيتَيْن", "type": "word"},
-  {"tense1": "montgolfière", "tense2": "مِنْطَاد / مَنَاطِيد / مِنْطَادَان / مَنَاطِيد / مِنْطَادَيْن", "type": "word"},
-  {"tense1": "fouiller", "tense2": "نَقَبَ / يَنْقُب / نَقْب / اُنْقُب / يُنْقَب / نُقِبَ", "type": "verb"},
-  {"tense1": "pichet", "tense2": "إِبْرِيق / أَبَارِيق / إِبْرِيقَان / أَبَارِيق / إِبْرِيقَيْن", "type": "word"},
-  {"tense1": "sieste", "tense2": "قَيْلُولَة / قَيْلُولَات / قَيْلُولَتَان / قَيْلُولَات / قَيْلُولَتَيْن", "type": "word"},
-  {"tense1": "rugir", "tense2": "زَأَرَ / يَزْأَرُ / زَئِير / اُزْأَر / يُزْأَر / زُئِرَ", "type": "verb"},
-  {"tense1": "contenu vidéo", "tense2": "مُحْتَوَى فِيدْيُو", "type": "sentence"},
-  {"tense1": "divertissement", "tense2": "تَرْفِيه / تَرْفِيهَات / تَرْفِيهَان / تَرْفِيهَات / تَرْفِيهَيْن", "type": "word"},
-  {"tense1": "épuiser", "tense2": "نَفَدَ / يَنْفَد / نَفَاد / اِنْفَد / يُنْفَد / نُفِدَ", "type": "verb"},
-  {"tense1": "indice", "tense2": "تَلْمِيح / تَلْمِيحَات / تَلْمِيحَان / تَلْمِيحَات / تَلْمِيحَيْن", "type": "word"},
-  {"tense1": "attention", "tense2": "اِهْتِمَام / اِهْتِمَامَات / اِهْتِمَامَان / اِهْتِمَامَات / اِهْتِمَامَيْن", "type": "word"},
-  {"tense1": "look", "tense2": "مَظْهَر / مَظَاهِر / مَظْهَرَان / مَظَاهِر / مَظْهَرَيْن", "type": "word"},
-  {"tense1": "faltar", "tense2": "نَقَصَ / يَنْقُص / نَقْص / اُنْقُص / يُنْقَص / نُقِصَ", "type": "verb"},
-  {"tense1": "stocker", "tense2": "خَزَّنَ / يُخَزِّن / تَخْزِين / خَزِّن / يُخَزَّن / خُزِّنَ", "type": "verb"},
-  {"tense1": "saveur", "tense2": "نَكْهَة / نَكْهَات / نَكْهَتَان / نَكْهَات / نَكْهَتَيْن", "type": "word"},
-  {"tense1": "cône", "tense2": "مَخْرُوط / مَخَارِيط / مَخْرُوطَان / مَخَارِيط / مَخْرُوطَيْن", "type": "word"},
-  {"tense1": "menthe", "tense2": "نَعْنَاع / نَعَانِع / نَعْنَاعَان / نَعَانِع / نَعْنَاعَيْن", "type": "word"},
-  {"tense1": "cerveau", "tense2": "دِمَاغ / أَدْمِغَة / دِمَاغَان / أَدْمِغَة / دِمَاغَيْن", "type": "word"},
-  {"tense1": "bouchon", "tense2": "غِطَاء زُجَاجَة", "type": "sentence"},
-  {"tense1": "croquette", "tense2": "مُقَرْمَشَة / مُقَرْمَشَات / مُقَرْمَشَتَان / مُقَرْمَشَات / مُقَرْمَشَتَيْن", "type": "word"}
+    {"tense1": "honnêtement", "tense2": "بِصَرَاحَة", "type": "word"},
+    {"tense1": "bêtise", "tense2": "تُرَّهَات / تُرَّهَتَان /تُرَّهَة / تُرَّهَات / تُرَّهَة", "type": "word"},
+    {"tense1": "coup de pied", "tense2": "رَكَلَ / يَرْكُل / رَكْل / اُرْكُل / يُرْكَل / رُكِلَ", "type": "verb"},
+    {"tense1": "affronter", "tense2": "تَنَافَسَ / يَتَنَافَس / تَنَافُس / تَنَافَسْ / يُتَنَافَس / تُنُوفِسَ", "type": "verb"},
+    {"tense1": "épice", "tense2": "بَهَار / بَهَارَات / بَهَارَان / بَهَارَات / بَهَارَيْن", "type": "word"},
+    {"tense1": "détecteur", "tense2": "لَاقِط / لَوَاقِط / لَاقِطَان / لَوَاقِط / لَاقِطَيْن", "type": "word"},
+    {"tense1": "obstacle", "tense2": "عَقَبَة / عَقَبَات / عَقَبَتَان / عَقَبَات / عَقَبَتَيْن", "type": "word"},
+    {"tense1": "brochette", "tense2": "كَبَاب / كَبَابَات / كَبَابَان / كَبَابَات / كَبَابَيْن", "type": "word"},
+    {"tense1": "gratter", "tense2": "دَلَّكَ / يُدَلِّك / تَدْلِيك / دَلِّك / يُدَلَّك / دُلِّكَ", "type": "verb"},
+    {"tense1": "front", "tense2": "جَبْهَة / جِبَاه / جَبْهَتَان / جِبَاهاً / جَبْهَتَيْن", "type": "word"},
+    {"tense1": "nuité", "tense2": "مَبِيت / مَبِيتَات / مَبِيتَان / مَبِيتَات / مَبِيتَيْن", "type": "word"},
+    {"tense1": "montgolfière", "tense2": "مِنْطَاد / مَنَاطِيد / مِنْطَادَان / مَنَاطِيد / مِنْطَادَيْن", "type": "word"},
+    {"tense1": "fouiller", "tense2": "نَقَبَ / يَنْقُب / نَقْب / اُنْقُب / يُنْقَب / نُقِبَ", "type": "verb"},
+    {"tense1": "pichet", "tense2": "إِبْرِيق / أَبَارِيق / إِبْرِيقَان / أَبَارِيق / إِبْرِيقَيْن", "type": "word"},
+    {"tense1": "sieste", "tense2": "قَيْلُولَة / قَيْلُولَات / قَيْلُولَتَان / قَيْلُولَات / قَيْلُولَتَيْن", "type": "word"},
+    {"tense1": "rugir", "tense2": "زَأَرَ / يَزْأَرُ / زَئِير / اُزْأَر / يُزْأَر / زُئِرَ", "type": "verb"},
+    {"tense1": "contenu vidéo", "tense2": "مُحْتَوَى فِيدْيُو", "type": "sentence"},
+    {"tense1": "divertissement", "tense2": "تَرْفِيه / تَرْفِيهَات / تَرْفِيهَان / تَرْفِيهَات / تَرْفِيهَيْن", "type": "word"},
+    {"tense1": "épuiser", "tense2": "نَفَدَ / يَنْفَد / نَفَاد / اِنْفَد / يُنْفَد / نُفِدَ", "type": "verb"},
+    {"tense1": "indice", "tense2": "تَلْمِيح / تَلْمِيحَات / تَلْمِيحَان / تَلْمِيحَات / تَلْمِيحَيْن", "type": "word"},
+    {"tense1": "attention", "tense2": "اِهْتِمَام / اِهْتِمَامَات / اِهْتِمَامَان / اِهْتِمَامَات / اِهْتِمَامَيْن", "type": "word"},
+    {"tense1": "look", "tense2": "مَظْهَر / مَظَاهِر / مَظْهَرَان / مَظَاهِر / مَظْهَرَيْن", "type": "word"},
+    {"tense1": "faltar", "tense2": "نَقَصَ / يَنْقُص / نَقْص / اُنْقُص / يُنْقَص / نُقِصَ", "type": "verb"},
+    {"tense1": "stocker", "tense2": "خَزَّنَ / يُخَزِّن / تَخْزِين / خَزِّن / يُخَزَّن / خُزِّنَ", "type": "verb"},
+    {"tense1": "saveur", "tense2": "نَكْهَة / نَكْهَات / نَكْهَتَان / نَكْهَات / نَكْهَتَيْن", "type": "word"},
+    {"tense1": "cône", "tense2": "مَخْرُوط / مَخَارِيط / مَخْرُوطَان / مَخَارِيط / مَخْرُوطَيْن", "type": "word"},
+    {"tense1": "menthe", "tense2": "نَعْنَاع / نَعَانِع / نَعْنَاعَان / نَعَانِع / نَعْنَاعَيْن", "type": "word"},
+    {"tense1": "cerveau", "tense2": "دِمَاغ / أَدْمِغَة / دِمَاغَان / أَدْمِغَة / دِمَاغَيْن", "type": "word"},
+    {"tense1": "bouchon", "tense2": "غِطَاء زُجَاجَة", "type": "sentence"},
+    {"tense1": "croquette", "tense2": "مُقَرْمَشَة / مُقَرْمَشَات / مُقَرْمَشَتَان / مُقَرْمَشَات / مُقَرْمَشَتَيْن", "type": "word"},
+    {"tense1": "même si", "tense2": "وَلَوْ", "type": "sentence"},
+  {"tense1": "succès", "tense2": "رَوَاج / رَوَاجَات / رَوَاجَاتٍ", "type": "word"},
+  {"tense1": "sirène", "tense2": "حُورِيَّة / حُورِيَّات / حُورِيَّتَان / حُورِيَّاتٍ / حُورِيَّتَيْن", "type": "word"},
+  {"tense1": "queue", "tense2": "ذَيْل / ذُيُول / ذَيْلَان / ذُيُولاً / ذَيْلَيْن", "type": "word"},
+  {"tense1": "ennuyant", "tense2": "مُمِلّ / مُمِلُّون / مُمِلَّان / مُمِلِّين / مُمِلَّيْن", "type": "word"},
+  {"tense1": "pornographie", "tense2": "إِبَاحِيَّة / إِبَاحِيَّات / إِبَاحِيَّاتٍ", "type": "word"},
+  {"tense1": "flocons", "tense2": "رُقَاقَات الثَّلْج / رُقَاقَات الثُّلُوج / رُقَاقَاتِ الثَّلْجِ", "type": "word"},
+  {"tense1": "salière", "tense2": "رَشَّاشَة مِلْح / رَشَّاشَات مِلْح / رَشَّاشَتَا مِلْح / رَشَّاشَاتِ مِلْحٍ / رَشَّاشَتَيْ مِلْح", "type": "word"},
+  {"tense1": "nécessaire", "tense2": "لَازِم / لَوَازِم / لَازِمَان / لَوَازِماً / لَازِمَيْن", "type": "word"},
+  {"tense1": "assaisonner", "tense2": "تَبَّلَ / يُتَبِّلُ / تَتْبِيل / تَبِّلْ / يُتَبَّلُ / تُبِّلَ", "type": "verb"},
+  {"tense1": "similitude", "tense2": "تَشَابُه / تَشَابُهَات / تَشَابُهَان / تَشَابُهَاتٍ / تَشَابُهَيْن", "type": "word"},
+  {"tense1": "mariage", "tense2": "عُرْس / أَعْرَاس / عُرْسَان / أَعْرَاساً / عُرْسَيْن", "type": "word"},
+  {"tense1": "préparer", "tense2": "جَهَّزَ / يُجَهِّزُ / تَجْهِيز / جَهِّزْ / يُجَهَّزُ / جُهِّزَ", "type": "verb"},
+  {"tense1": "démissionner", "tense2": "اِسْتَقَالَ / يَسْتَقِيلُ / اِسْتِقَالَة / اِسْتَقِلْ / يُسْتَقَالُ / اُسْتُقِيلَ", "type": "verb"},
+  {"tense1": "se consacrer à", "tense2": "تَفَرَّغَ / يَتَفَرَّغُ / تَفَرُّغ / تَفَرَّغْ / يُتَفَرَّغُ / تُفُرِّغَ", "type": "verb"},
+  {"tense1": "utilité", "tense2": "جَدْوَى", "type": "word"},
+  {"tense1": "couche bébé", "tense2": "حَفَّاضَة / حَفَّاضَات / حَفَّاضَتَان / حَفَّاضَاتٍ / حَفَّاضَتَيْن", "type": "word"},
+  {"tense1": "colle", "tense2": "غِرَاء / أَغْرِيَة / غِرَاءَان / أَغْرِيَةً / غِرَاءَيْن", "type": "word"},
+  {"tense1": "tandis que", "tense2": "فِي حِينِ أَنَّ", "type": "sentence"},
+  {"tense1": "perspicacité", "tense2": "فِطْنَة / فِطَن / فِطَناً", "type": "word"},
+  {"tense1": "juger", "tense2": "حَكَمَ / يَحْكُمُ / حُكْم / اُحْكُمْ / يُحْكَمُ / حُكِمَ", "type": "verb"},
+  {"tense1": "critère", "tense2": "مِقْيَاس / مَقَايِيس / مِقْيَاسَان / مَقَايِيساً / مِقْيَاسَيْن", "type": "word"},
+  {"tense1": "parmi ceux", "tense2": "مِمَّنْ", "type": "word"},
+  {"tense1": "se brosser les dents", "tense2": "اِسْتَاكَ / يَسْتَاكُ / اِسْتِيَاك / اِسْتَكْ / يُسْتَاكُ / اُسْتِيكَ", "type": "verb"},
+  {"tense1": "brosse à dents", "tense2": "فُرْشَاة الأَسْنَان / فُرَش الأَسْنَان / فُرْشَاتَا الأَسْنَان / فُرَشَ الأَسْنَانِ / فُرْشَاتَيْ الأَسْنَان", "type": "word"},
+  {"tense1": "particules", "tense2": "جُزَيْئَة / جُزَيْئَات / جُزَيْئَتَان / جُزَيْئَاتٍ / جُزَيْئَتَيْن", "type": "word"},
+  {"tense1": "ancre", "tense2": "مِرْسَاة / مَرَاسٍ / مِرْسَاتَان / مَرَاسِياً / مِرْسَاتَيْن", "type": "word"},
+  {"tense1": "nageoire", "tense2": "زَعْنَفَة / زَعَانِف / زَعْنَفَتَان / زَعَانِفاً / زَعْنَفَتَيْن", "type": "word"},
+  {"tense1": "fidélité", "tense2": "وَفَاء", "type": "word"},
+  {"tense1": "honorer", "tense2": "بَرَّ / يَبَرُّ / بِرّ / بَرَّ / يُبَرُّ / بُرَّ", "type": "verb"},
+  {"tense1": "obéir", "tense2": "أَطَاعَ / يُطِيعُ / طَاعَة / أَطِعْ / يُطَاعُ / أُطِيعَ", "type": "verb"},
+  {"tense1": "traitement", "tense2": "مُعَامَلَة / مُعَامَلَات / مُعَامَلَتَان / مُعَامَلَاتٍ / مُعَامَلَتَيْن", "type": "word"},
+  {"tense1": "tropical", "tense2": "اِسْتِوَائِيّ / اِسْتِوَائِيُّون / اِسْتِوَائِيَّان / اِسْتِوَائِيِّين / اِسْتِوَائِيَّيْن", "type": "word"},
+  {"tense1": "cactus", "tense2": "صَبَّار / صَبَّارَات / صَبَّارَان / صَبَّارَاتٍ / صَبَّارَيْن", "type": "word"},
+  {"tense1": "poussière", "tense2": "غُبَار / أَغْبِرَة / أَغْبِرَةً", "type": "word"},
+  {"tense1": "portada", "tense2": "غِلَاف / أَغْلِفَة / غِلَافَان / أَغْلِفَةً / غِلَافَيْن", "type": "word"},
+  {"tense1": "se dérouler", "tense2": "دَارَت / تَدُورُ / دَوَرَان / دُرْ / يُدَارُ / دِيرَ", "type": "verb"},
+  {"tense1": "une fois que", "tense2": "بِمُجَرَّدِ أَنْ", "type": "sentence"},
+  {"tense1": "fond", "tense2": "قَاع / قِيعَان / قَاعَان / قِيعَاناً / قَاعَيْن", "type": "word"},
+  {"tense1": "se reproduire", "tense2": "تَكَاثَرَت / تَتَكَاثَرُ / تَكَاثُر / تَكَاثَرْ / يُتَكَاثَرُ / تُكُوثِرَ", "type": "verb"},
+  {"tense1": "conflit", "tense2": "خِلَاف / خِلَافَات / خِلَافَان / خِلَافَاتٍ / خِلَافَيْن", "type": "word"},
+  {"tense1": "s'habituer", "tense2": "تَعَوَّدَ / يَتَعَوَّدُ / تَعَوُّد / تَعَوَّدْ / يُتَعَوَّدُ / تُعُوِّدَ", "type": "verb"},
+  {"tense1": "s'impliquer", "tense2": "أَقْحَمَ / يُقْحِمُ / إِقْحَام / أَقْحِمْ / يُقْحَمُ / أُقْحِمَ", "type": "verb"}
 ]
+
+
 
         // French
         const pronouns_french = ["je", "tu", "il", "elle", "nous", "vous", "ils", "elles"];
