new arabic word

--- a/index.html
+++ b/index.html
@@ -1443,7 +1443,29 @@
   {"tense1": "se reproduire", "tense2": "تَكَاثَرَت / تَتَكَاثَرُ / تَكَاثُر / تَكَاثَرْ / يُتَكَاثَرُ / تُكُوثِرَ", "type": "verb"},
   {"tense1": "conflit", "tense2": "خِلَاف / خِلَافَات / خِلَافَان / خِلَافَاتٍ / خِلَافَيْن", "type": "word"},
   {"tense1": "s'habituer", "tense2": "تَعَوَّدَ / يَتَعَوَّدُ / تَعَوُّد / تَعَوَّدْ / يُتَعَوَّدُ / تُعُوِّدَ", "type": "verb"},
-  {"tense1": "s'impliquer", "tense2": "أَقْحَمَ / يُقْحِمُ / إِقْحَام / أَقْحِمْ / يُقْحَمُ / أُقْحِمَ", "type": "verb"}
+  {"tense1": "s'impliquer", "tense2": "أَقْحَمَ / يُقْحِمُ / إِقْحَام / أَقْحِمْ / يُقْحَمُ / أُقْحِمَ", "type": "verb"},
+  {"tense1": "Yaourt", "tense2": "لَبَن زَبَادِي / أَلْبَان زَبَادِي / لَبَنَانِ زَبَادِي / أَلْبَانًا زَبَادِي / لَبَنَيْنِ زَبَادِي", "type": "word"},
+  {"tense1": "Ridicule", "tense2": "سَخِيف / سُخُفَاء / سَخِيفَانِ / سُخُفَاءً / سَخِيفَيْنِ", "type": "word"},
+  {"tense1": "Larme", "tense2": "دَمْعَةٌ / دُمُوعٌ / دَمْعَتَانِ / دُمُوعًا / دَمْعَتَيْنِ", "type": "word"},
+  {"tense1": "Dirigeant", "tense2": "زَعِيم / زُعَمَاء / زَعِيمَانِ / زُعَمَاءً / زَعِيمَيْنِ", "type": "word"},
+  {"tense1": "Idole", "tense2": "صَنَم / أَصْنَام / صَنَمَانِ / أَصْنَامًا / صَنَمَيْنِ", "type": "word"},
+  {"tense1": "Vénérer", "tense2": "عَبَدَ/يَعْبُدُ/عِبَادَة/اُعْبُدْ/يُعْبَدُ/عُبِدَ", "type": "verb"},
+  {"tense1": "Avoir hâte", "tense2": "تَلَهَّفَ/يَتَلَهَّفُ/تَلَهُّفٌ/تَلَهَّفْ/يُتَلَهَّفُ/تُلَهِّفَ", "type": "verb"},
+  {"tense1": "Pistolet", "tense2": "مُسَدَّس / مُسَدَّسَات / مُسَدَّسَانِ / مُسَدَّسَاتٍ / مُسَدَّسَيْنِ", "type": "word"},
+  {"tense1": "Se pousser", "tense2": "أَفْسَحَ/يُفْسِحُ/إِفْسَاح/أَفْسِحْ/يُفْسَحُ/أُفْسِحَ", "type": "verb"},
+  {"tense1": "Raccourci", "tense2": "مُخْتَصَر / مُخْتَصَرَات / مُخْتَصَرَانِ / مُخْتَصَرَاتٍ / مُخْتَصَرَيْنِ", "type": "word"},
+  {"tense1": "Potion", "tense2": "جُرْعَةٌ / جُرَعٌ / جُرْعَتَانِ / جُرَعًا / جُرْعَتَيْنِ", "type": "word"},
+  {"tense1": "S'accrocher", "tense2": "تَشَبَّثَ/يَتَشَبَّثُ/تَشَبُّثٌ/تَشَبَّثْ/يُتَشَبَّثُ/تُشَبِّثَ", "type": "verb"},
+  {"tense1": "Victoire", "tense2": "نَصْر / نُصُور / نَصْرَانِ / نُصُورًا / نَصْرَيْنِ", "type": "word"},
+  {"tense1": "Élevé", "tense2": "شَاهِق / شَوَاهِق / شَاهِقَانِ / شَوَاهِقًا / شَاهِقَيْنِ", "type": "word"},
+  {"tense1": "Bombarder", "tense2": "قَصَفَ/يَقْصِفُ/قَصْف/اقْصِفْ/يُقْصَفُ/قُصِفَ", "type": "verb"},
+  {"tense1": "Interdiction", "tense2": "حَظْر / حَظَرَات / حَظْرَانِ / حَظَرَاتٍ / حَظْرَيْنِ", "type": "word"},
+  {"tense1": "Réussir", "tense2": "أَفْلَحَ/يُفْلِحُ/إِفْلَاح/أَفْلِحْ/يُفْلَحُ/أُفْلِحَ", "type": "verb"},
+  {"tense1": "Nom-able", "tense2": "قَابِل لِـ / قَابِلُونَ لِـ / قَابِلَانِ لِـ / قَابِلِينَ لِـ / قَابِلَيْنِ لِـ", "type": "word"},
+  {"tense1": "Bombe", "tense2": "قُنْبُلَةٌ / قَنَابِلُ / قُنْبُلَتَانِ / قَنَابِلَ / قُنْبُلَتَيْنِ", "type": "word"},
+  {"tense1": "Dîner", "tense2": "تَعَشَّى/يَتَعَشَّى/تَعَشٍّ/تَعَشَّ/يُتَعَشَّى/تُعُشِّيَ", "type": "verb"},
+  {"tense1": "Beau-parent", "tense2": "نَسِيب / نُسَبَاء / نَسِيبَانِ / نُسَبَاءً / نَسِيبَيْنِ", "type": "word"},
+  {"tense1": "Mettre", "tense2": "حَطَّ/يَحُطُّ/حَطٌّ/حُطَّ/يُحَطُّ/حُطَّ", "type": "verb"}
 ]
 
 
