new arabic words

--- a/index.html
+++ b/index.html
@@ -1465,8 +1465,35 @@
   {"tense1": "Bombe", "tense2": "قُنْبُلَةٌ / قَنَابِلُ / قُنْبُلَتَانِ / قَنَابِلَ / قُنْبُلَتَيْنِ", "type": "word"},
   {"tense1": "Dîner", "tense2": "تَعَشَّى/يَتَعَشَّى/تَعَشٍّ/تَعَشَّ/يُتَعَشَّى/تُعُشِّيَ", "type": "verb"},
   {"tense1": "Beau-parent", "tense2": "نَسِيب / نُسَبَاء / نَسِيبَانِ / نُسَبَاءً / نَسِيبَيْنِ", "type": "word"},
-  {"tense1": "Mettre", "tense2": "حَطَّ/يَحُطُّ/حَطٌّ/حُطَّ/يُحَطُّ/حُطَّ", "type": "verb"}
+  {"tense1": "Mettre", "tense2": "حَطَّ/يَحُطُّ/حَطٌّ/حُطَّ/يُحَطُّ/حُطَّ", "type": "verb"},
+  {"tense1": "Étaler", "tense2": "بَسَطَ/يَبْسُط/بَسْط/بْسُط/يُبْسَط/بُسِطَ", "type": "verb"},
+  {"tense1": "Compenser", "tense2": "عَوَّضَ/يُعَوِّض/تَعْوِيض/عَوِّض/يُعَوَّض/عُوِّضَ", "type": "verb"},
+  {"tense1": "Écraser", "tense2": "سَحَقَ/يَسْحَق/سَحْق/اسْحَق/يُسْحَق/سُحِقَ", "type": "verb"},
+  {"tense1": "Doubler/Multiplier", "tense2": "ضَاعَفَ/يُضَاعِف/مُضَاعَفَة/ضَاعِف/يُضَاعَف/ضُوعِفَ", "type": "verb"},
+  {"tense1": "Faire don", "tense2": "تَبَرَّعَ/يَتَبَرَّع/تَبَرُّع/تَبَرَّع/يُتَبَرَّض/تُبُرِّعَ", "type": "verb"},
+  {"tense1": "Déranger", "tense2": "عَطَّلَ/يُعَطِّل/تَعْطِيل/عَطِّل/يُعَطَّل/عُطِّلَ", "type": "verb"},
+  {"tense1": "Voler (dans les airs)", "tense2": "حَلَّقَ/يُحَلِّق/تَحْلِيق/حَلِّق/يُحَلَّق/حُلِّقَ", "type": "verb"},
+  {"tense1": "Presser", "tense2": "اسْتَعْجَلَ/يَسْتَعْجِل/اسْتِعْجَال/اسْتَعْجِل/يُسْتَعْجَل/اسْتُعْجِلَ", "type": "verb"},
+  {"tense1": "Soulever une question", "tense2": "طَرَحَ/يَطْرَح/طَرْح/اطْرَح/يُطْرَح/طُرِحَ", "type": "verb"},
+  {"tense1": "Détresse", "tense2": "استِغَاثَة / اسْتِغَاثَات / اسْتِغَاثَتَانِ / اسْتِغَاثَاتٍ / اسْتِغَاثَتَيْنِ", "type": "word"},
+  {"tense1": "Curiosité", "tense2": "فُضُول / فُضُولَات / فُضُولَانِ / فُضُولَاتٍ / فُضُولَتَيْنِ", "type": "word"},
+  {"tense1": "Roue", "tense2": "إِطَار / إِطَارَات / إِطَارَانِ / إِطَارَاتٍ / إِطَارَتَيْنِ", "type": "word"},
+  {"tense1": "Courbe", "tense2": "مُنْحَنَى / مُنْحَنَيَات / مُنْحَنَيَانِ / مُنْحَنَيَاتٍ / مُنْحَنَيَتَيْنِ", "type": "word"},
+  {"tense1": "Morve", "tense2": "مُخَاط / مُخَاطَات / مُخَاطَانِ / مُخَاطَاتٍ / مُخَاطَتَيْنِ", "type": "word"},
+  {"tense1": "Dialogue", "tense2": "حِوَار / حِوَارَات / حِوَارَانِ / حِوَارَاتٍ / حِوَارَتَيْنِ", "type": "word"},
+  {"tense1": "Chantage", "tense2": "ابْتِزَاز / ابْتِزَازَات / ابْتِزَازَانِ / ابْتِزَازَاتٍ / ابْتِزَازَتَيْنِ", "type": "word"},
+  {"tense1": "Horizon", "tense2": "أُفُق / آفَاق / أُفُقَانِ / آفَاقٍ / أُفُقَتَيْنِ", "type": "word"},
+  {"tense1": "Brise", "tense2": "نَسِيم / نَسَمَات / نَسِيمَانِ / نَسَمَاتٍ / نَسِيمَتَيْنِ", "type": "word"},
+  {"tense1": "Léger/faible", "tense2": "خَفِيف / خِفَاف / خَفِيفَانِ / خِفَافٍ / خَفِيفَتَيْنِ", "type": "word"},
+  {"tense1": "Sabot", "tense2": "حَافِر / حَوَافِر / حَافِرَانِ / حَوَافِرٍ / حَافِرَتَيْنِ", "type": "word"},
+  {"tense1": "Méchant", "tense2": "شِرِّير / أَشْرَار / شِرِّيرَانِ / أَشْرَارٍ / شِرِّيرَتَيْنِ", "type": "word"},
+  {"tense1": "Canon", "tense2": "مِدْفَع / مَدَافِع / مِدْفَعَانِ / مَدَافِعٍ / مِدْفَعَتَيْنِ", "type": "word"},
+  {"tense1": "Garniture", "tense2": "إِضَافَة / إِضَافَات / إِضَافَتَانِ / إِضَافَاتٍ / إِضَافَتَيْنِ", "type": "word"},
+  {"tense1": "Affectueux", "tense2": "وَدُود / وُدَّاء / وَدُودَانِ / وُدَّاءٍ / وَدُودَتَيْنِ", "type": "word"},
+  {"tense1": "Excitant", "tense2": "مُثِير / مُثِيرَات / مُثِيرَانِ / مُثِيرَاتٍ / مُثِيرَتَيْنِ", "type": "word"},
+  {"tense1": "Mourant", "tense2": "مُحْتَضِر / مُحْتَضَرُون / مُحْتَضِرَانِ / مُحْتَضَرِينَ / مُحْتَضِرَتَيْنِ", "type": "word"}
 ]
+
 
 
 
