--- a/index.html
+++ b/index.html
@@ -1491,7 +1491,55 @@
   {"tense1": "Garniture", "tense2": "إِضَافَة / إِضَافَات / إِضَافَتَانِ / إِضَافَاتٍ / إِضَافَتَيْنِ", "type": "word"},
   {"tense1": "Affectueux", "tense2": "وَدُود / وُدَّاء / وَدُودَانِ / وُدَّاءٍ / وَدُودَتَيْنِ", "type": "word"},
   {"tense1": "Excitant", "tense2": "مُثِير / مُثِيرَات / مُثِيرَانِ / مُثِيرَاتٍ / مُثِيرَتَيْنِ", "type": "word"},
-  {"tense1": "Mourant", "tense2": "مُحْتَضِر / مُحْتَضَرُون / مُحْتَضِرَانِ / مُحْتَضَرِينَ / مُحْتَضِرَتَيْنِ", "type": "word"}
+  {"tense1": "Mourant", "tense2": "مُحْتَضِر / مُحْتَضَرُون / مُحْتَضِرَانِ / مُحْتَضَرِينَ / مُحْتَضِرَتَيْنِ", "type": "word"},
+  {"tense1": "Feu d'artifice", "tense2": "أَلْعَابٌ نَارِيَّةٌ / أَلْعَابٌ نَارِيَّةٍ / أَلْعَابٌ نَارِيَّتَانِ / أَلْعَابَ نَارِيَّةٍ / أَلْعَابَيْ نَارِيَّةٍ", "type": "word"},
+  {"tense1": "Défilé", "tense2": "مَوْكِبٌ / مَوَاكِبُ / مَوْكِبَانِ / مَوَاكِبَ / مَوْكِبَيْ", "type": "word"},
+  {"tense1": "Déguisement", "tense2": "تَنَكُّرٌ / تَنَكُّرٍ / تَنَكُّرَانِ / تَنَكُّرَ / تَنَكُّرَيْ", "type": "word"},
+  {"tense1": "Couteau", "tense2": "سِكِّينٌ / سَكَاكِينُ / سِكِّينَانِ / سَكَاكِينَ / سِكِّينَيْ", "type": "word"},
+  {"tense1": "Réalité", "tense2": "وَاقِعٌ / وَقَائِعُ / وَاقِعَانِ / وَقَائِعَ / وَاقِعَيْ", "type": "word"},
+  {"tense1": "Trouver préférable", "tense2": "استحسنَ/يستحسنُ/استحسان/استحسِنْ/يُستحسَنُ/اُستُحسِنَ", "type": "verb"},
+  {"tense1": "Excuse", "tense2": "عُذْرٌ / أَعْذَارٌ / عُذْرَانِ / أَعْذَارَ / عُذْرَيْ", "type": "word"},
+  {"tense1": "Grossier", "tense2": "فَظٌّ / فُظُظٌ / فَظَّانِ / فُظُظَ / فَظَّيْ", "type": "word"},
+  {"tense1": "Compassion", "tense2": "عَطْفٌ / عَوَاطِفُ / عَطْفَانِ / عَوَاطِفَ / عَطْفَيْ", "type": "word"},
+  {"tense1": "Limitation", "tense2": "الْحَدُّ / حُدُودٌ / حَدَّانِ / حُدُودَ / حَدَّيْ", "type": "word"},
+  {"tense1": "Rime", "tense2": "قَافِيَةٌ / قَوَافٍ / قَافِيَتَانِ / قَوَافِيَ / قَافِيَتَيْ", "type": "word"},
+  {"tense1": "Apporter", "tense2": "جَلَبَ/يَجْلِبُ/جَلْب/اُجْلِبْ/يُجْلَبُ/جُلِبَ", "type": "verb"},
+  {"tense1": "Panneau", "tense2": "لَوْحَةٌ / لَوَحَاتٌ / لَوْحَتَانِ / لَوَحَاتٍ / لَوْحَتَيْ", "type": "word"},
+  {"tense1": "Lettre", "tense2": "حَرْفٌ / حُرُوفٌ / حَرْفَانِ / حُرُوفَ / حَرْفَيْ", "type": "word"},
+  {"tense1": "Alphabet", "tense2": "أَبْجَدِيَّةٌ / أَبْجَدِيَّاتٌ / أَبْجَدِيَّتَانِ / أَبْجَدِيَّاتٍ / أَبْجَدِيَّتَيْ", "type": "word"},
+  {"tense1": "Vieillir", "tense2": "شَاخَ/يَشِيبُ/شَيْب/شِبْ/يُشَابُ/شِيبَ", "type": "verb"},
+  {"tense1": "Championnat", "tense2": "بُطُولَةٌ / بُطُولَاتٌ / بُطُولَتَانِ / بُطُولَاتٍ / بُطُولَتَيْ", "type": "word"},
+  {"tense1": "Ruine", "tense2": "آثَارٌ / آثَارٌ / أَثَرَانِ / آثَارَ / أَثَرَيْ", "type": "word"},
+  {"tense1": "Mordre", "tense2": "عَضَّ/يَعَضُّ/عَضّ/اعْضِضْ/يُعَضُّ/عُضَّ", "type": "verb"},
+  {"tense1": "Joue", "tense2": "خَدٌّ / خُدُودٌ / خَدَّانِ / خُدُودَ / خَدَّيْ", "type": "word"},
+  {"tense1": "Veiller", "tense2": "سَهِرَ/يَسْهَرُ/سَهَر/اسْهَرْ/يُسْهَرُ/أُسْهِرَ", "type": "verb"},
+  {"tense1": "Passer du temps", "tense2": "أَمْضَى/يَمْضِي/مُضَيَّ/أَمْضِ/يُمْضَى/أُمْضِيَ", "type": "verb"},
+  {"tense1": "Coiffure", "tense2": "تَسْرِيحَةٌ / تَسَارِيحُ / تَسْرِيحَتَانِ / تَسَارِيحَ / تَسْرِيحَتَيْ", "type": "word"},
+  {"tense1": "Dédicacer", "tense2": "أَهْدَى/يُهْدِي/إِهْدَاء/أَهْدِ/يُهْدَى/أُهْدِيَ", "type": "verb"},
+  {"tense1": "Attendre avec impatience", "tense2": "انْتَظَرَ/يَنْتَظِرُ/انْتِظَار/انْتَظِرْ/يُنْتَظَرُ/اُنْتُظِرَ", "type": "verb"},
+  {"tense1": "S'introduire", "tense2": "اقْتَحَمَ/يَقْتَحِمُ/اقْتِحَام/اقْتَحِمْ/يُقْتَحَمُ/اُقْتُحِمَ", "type": "verb"},
+  {"tense1": "Informer", "tense2": "أَبْلَغَ/يُبْلِغُ/إِبْلَاغ/أَبْلِغْ/يُبْلَغُ/أُبْلِغَ", "type": "verb"},
+  {"tense1": "Déchet", "tense2": "خُرْدَةٌ / خُرَدٌ / خُرْدَتَانِ / خُرَدَ / خُرْدَتَيْ", "type": "word"},
+  {"tense1": "Saint", "tense2": "قِدِّيسٌ / قِدِّيسُونَ / قِدِّيسَانِ / قِدِّيسِينَ / قِدِّيسَيْ", "type": "word"},
+  {"tense1": "Kidnapping", "tense2": "اخْتِطَافٌ / اخْتِطَافَاتٌ / اخْتِطَافَانِ / اخْتِطَافَاتٍ / اخْتِطَافَتَيْ", "type": "word"},
+  {"tense1": "Attraction", "tense2": "لَعْبَةٌ مُثِيرَةٌ / أَلْعَابٌ مُثِيرَةٌ / لَعْبَتَانِ مُثِيرَتَانِ / أَلْعَابَ مُثِيرَةٍ / لَعْبَتَيْ مُثِيرَةٍ", "type": "word"},
+  {"tense1": "Troupe", "tense2": "الْجُنُودُ / جُنُودٌ / جُنْدَانِ / جُنُودَ / جُنْدَيْ", "type": "word"},
+  {"tense1": "Permis", "tense2": "تَصْرِيحٌ / تَصَارِيحُ / تَصْرِيحَانِ / تَصَارِيحَ / تَصْرِيحَيْ", "type": "word"},
+  {"tense1": "Mariage", "tense2": "زِفَافٌ / زُفَافَاتٌ / زِفَافَانِ / زُفَافَاتٍ / زِفَافَتَيْ", "type": "word"},
+  {"tense1": "Possibilités", "tense2": "إِمْكَانِيَّةٌ / إِمْكَانِيَّاتٌ / إِمْكَانِيَّتَانِ / إِمْكَانِيَّاتٍ / إِمْكَانِيَّتَيْ", "type": "word"},
+  {"tense1": "Cadeau", "tense2": "عَطَاءٌ / عَطَايَا / عَطَاءَانِ / عَطَايَا / عَطَاءَيْ", "type": "word"},
+  {"tense1": "Destin", "tense2": "مَصِيرٌ / مَصَائِرُ / مَصِيرَانِ / مَصَائِرَ / مَصِيرَيْ", "type": "word"},
+  {"tense1": "Murmure", "tense2": "هَمْسَةٌ / هَمَسَاتٌ / هَمْسَتَانِ / هَمَسَاتٍ / هَمْسَتَيْ", "type": "word"},
+  {"tense1": "Détruire", "tense2": "هَدَمَ/يَهْدِمُ/هَدْم/اهْدِمْ/يُهْدَمُ/هُدِمَ", "type": "verb"},
+  {"tense1": "Modeste", "tense2": "مُتَوَاضِعٌ / مُتَوَاضِعُونَ / مُتَوَاضِعَانِ / مُتَوَاضِعِينَ / مُتَوَاضِعَيْ", "type": "word"},
+  {"tense1": "Sensible", "tense2": "حَسَّاسٌ / حَسَّاسُونَ / حَسَّاسَانِ / حَسَّاسِينَ / حَسَّاسَيْ", "type": "word"},
+  {"tense1": "Chuchoter", "tense2": "هَمَسَ/يَهْمِسُ/هَمْس/اهْمِسْ/يُهْمَسُ/هُمِسَ", "type": "verb"},
+  {"tense1": "Célébrer", "tense2": "كَرَّمَ/يُكَرِّمُ/تَكْرِيم/كَرِّمْ/يُكَرَّمُ/كُرِّمَ", "type": "verb"},
+  {"tense1": "Farce (poulet)", "tense2": "حَشْوٌ / حُشُوٌ / حَشْوَانِ / حُشُوَ / حَشْوَيْ", "type": "word"},
+  {"tense1": "Gratitude", "tense2": "امْتِنَانٌ / امْتِنَانَاتٌ / امْتِنَانَانِ / امْتِنَانَاتٍ / امْتِنَانَتَيْ", "type": "word"},
+  {"tense1": "Devoir/dette", "tense2": "يَدِينُ / دُيُونٌ / دَيْنَانِ / دُيُونَ / دَيْنَيْ", "type": "word"},
+  {"tense1": "Supplier", "tense2": "تَوَسَّلَ/يَتَوَسَّلُ/تَوَسُّل/تَوَسَّلْ/يُتَوَسَّلُ/تُوُسِّلَ", "type": "verb"}
+
 ]
 
 
